--- a/FormManager/Web.config
+++ b/FormManager/Web.config
@@ -23,11 +23,19 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/LogOn" timeout="2880">
         <credentials passwordFormat="SHA1">
-          <user name="formadmin" password="2b5cb21f25aa4e8c2635ee3ecd389cd6a4ad30ed" />
+          <user name="formadmin" password="cac933391b3df6244f5aa86fa93425f67e42c59f" />
         </credentials>
       </forms>
     </authentication>
   </system.web>
+  <system.webServer>
+    <httpProtocol>
+      <customHeaders>
+        <clear />
+        <add name="Access-Control-Allow-Origin" value="*" />
+      </customHeaders>
+    </httpProtocol>
+  </system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
